--- a/app/assets/stylesheets/views/layouts/application.scss
+++ b/app/assets/stylesheets/views/layouts/application.scss
@@ -11,10 +11,18 @@
     align-items:center;
     padding: 0 1em;
 
-    &__logo a{
+    &__logo a, {
       font-size: 20px;
       color: #fff;
       text-decoration: none;
+      background-color: #444;
+    }
+
+    &__links a {
+      color: #fff;
+      text-decoration: none;
+      background-color: #444;
+      margin-left: 1em;
     }
   }
 
