--- a/app/views/layouts/application/_top_navbar.html.haml
+++ b/app/views/layouts/application/_top_navbar.html.haml
@@ -5,5 +5,5 @@
   .top-navbar__links
     1.
     2.
-    3.
+    = link_to 'Workspaces', workspaces_path
     = link_to 'Log out', destroy_user_session_path, method: :delete
