Added WorkspacePolicy, tests

--- a/app/views/workspaces/index.html.haml
+++ b/app/views/workspaces/index.html.haml
@@ -20,3 +20,4 @@
         .col-9
           .workspace__links
             = link_to 'Tasks', workspace_tasks_path(workspace)
+            = link_to 'Edit', edit_workspace_path(workspace)
